<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_radar_fusion</name>
  <version>0.0.1</version>
  <description>multi_radar_fusion</description>
  <maintainer email="LIANGMINQUAN@outlook.com">Michael Leon</maintainer>
  <license>Apache License 2.0</license>
  <author email="LIANGMINQUAN@outlook.com">Michael Leon</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_perception_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>radar_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_autoware_utils</depend>

  <build_depend>autoware_cmake</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
